# VLSGN_ROB530-Team21

./: .gitignore  Presentation.pptx  README.md  package.xml  requirements.txt  setup.py
config/: cartographer.lua  nav2_params.yaml  object_list.yaml
data/: exploration_map.pgm  exploration_map.yaml
launch/: exploration.launch.py  full_system.launch.py  navigation.launch.py
models/turtlebot3_waffle_pi/: model.sdf
scripts/: analyze_results.py  plot_semantic_map.py  run_full_evaluation.py  setup_greatlakes.sh  visualize_semantic_map.py
scripts/data/experiments/: results_table.tex
src/semantic_navigation/: __init__.py  bbox_to_3d.py  command_parser.py  frontier_explorer.py  frontier_explorer_node.py  grounding_dino_detector.py  grounding_dino_node.py  mission_controller.py  mission_controller_node.py  semantic_map.py  semantic_map_node.py  teleop_interface.py
test/: test_local.py
urdf/: robot.urdf.xacro
worlds/: single_room.world
